--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@ nav ul{
 .GameContainer{
     display: flex;
     justify-content: center;
-    background-color: lavenderblush;
+    flex-wrap: wrap;
     margin-top: 50px;
 }
 .container{
     display: grid;
     grid-template-columns: repeat(3, 10vw);
     grid-template-rows: repeat(3, 10vw);
+
 }
 .box{
     border: 2px solid black;
@@ -40,6 +41,25 @@ nav ul{
     padding: 0 30px;
 
 }
-.ImageBox{
-    display: none;
+.ImageBox img{
+    width: 0;
+    transition: width 1s ease-in-out;
+    padding: 20px;
+    margin-left: 50px;
+}
+.Info h1{
+    font-size: 32px;
+    font-style: italic;
+}
+.TurnInfo{
+    font-size: 20px;
+    margin-left: 40px;
+}
+.Reset{
+    padding: 5px;
+    border-radius: 20px;
+    border-color: cornflowerblue;
+    background-color: slategray;
+    width: 100px;
+    margin-left: 50px;
 }
